fix: alignment of vertically stacked buttons in button group

--- a/components/action-group/src/_mixin.scss
+++ b/components/action-group/src/_mixin.scss
@@ -27,6 +27,10 @@
 }
 
 @mixin utrecht-action-group--column {
+  --utrecht-button-max-inline-size: none;
+
+  align-items: stretch;
   flex-direction: column;
-  gap: var(--utrecht-action-group-block-gap, 1em);
+  gap: var(--utrecht-button-group-block-gap, 1em);
+  inline-size: fit-content;
 }
